--- a/views/admin-delete.ejs
+++ b/views/admin-delete.ejs
@@ -1,7 +1,7 @@
 <%include partials/header%>
 <div class="hero">
-    <h1 class="hero-head">Here's The Treasure!</h1>
-    <p><em>All The Content we have uploaded ever.</em></p>
+    <h1 class="hero-head">Say Bye! :(</h1>
+    <p><em>Delete Posts</em></p>
     <a href="/gsad/admin" class="btn big green">Go Back</a>
 </div>
 <div class="grid container">
@@ -10,8 +10,8 @@
             <div class="desc">
                 <p><strong>Title: </strong> <%=post.title%></p>
                 <p><strong>Info: </strong><%=post.info%></p>
-                <p><strong>uploader: </strong><%=post.uploaded_by%></p>
                 <p><strong>Content ID: </strong><%=post._id%></p>
+                <a href="/gsad/admin/delete/<%=post._id%>" class="btn btn-block red">Delete</a>
             </div>
         </div>
     <%});%>
