--- a/views/admin-panel.ejs
+++ b/views/admin-panel.ejs
@@ -11,11 +11,11 @@
     </div>
     <div class="col-4 hero">
         <h1>View Content</h1>
-        <a href="" class="btn btn-block blue">View</a>
+        <a href="/gsad/admin/view" class="btn btn-block blue">View</a>
     </div>
     <div class="col-4 hero">
         <h1>Delete Content</h1>
-        <a href="" class="btn btn-block red">Delete</a>
+        <a href="/gsad/admin/delete" class="btn btn-block red">Delete</a>
     </div>
 </div>
 <%include partials/footer%>
