--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,6 +1,6 @@
 <%include partials/header%>
     <%=post.title%>
-    <form action="/<%=post._id%>?_method=DELETE" method="POST">
+    <form action="/gsad/admin/delete/<%=post._id%>?_method=DELETE" method="POST">
         <button class="btn big red">
             delete
         </button>
