improve api routing and add main routing beautified the admin control panel a bit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,6 @@
 <%include partials/header%>
 <div class="grid container">
-    <%posts.forEach(function(post){%>
-        <div class="col-4">
-            <%=post.title%>
-            <a href="/<%=post._id%>" class="btn btn-block yellow">settings</a>
-        </div>
-    <%})%>
+    <h1>index route</h1>
 </div>
 
 <%include partials/footer%>
