--- a/views/admin-confirm-delete.ejs
+++ b/views/admin-confirm-delete.ejs
@@ -1,20 +1,22 @@
 <%include partials/header%>
 <div class="hero">
-    <h1 class="hero-head">Here's The Treasure!</h1>
-    <p><em>All The Content we have uploaded ever.</em></p>
+    <h1 class="hero-head">Are you Sure you Want to Delete this?</h1>
+    <p><em>This change is permanent and is not reversible.</em></p>
     <a href="/gsad/admin" class="btn big green">Go Back</a>
 </div>
 <div class="grid container">
-    <% allposts.forEach(function(post){%>
-        <div class="col-4 content">
-            <div class="desc">
+    <div class="col-12 content">
+        <div class="desc">
                 <p><strong>Title: </strong> <%=post.title%></p>
                 <p><strong>Info: </strong><%=post.info%></p>
                 <p><strong>uploader: </strong><%=post.uploaded_by%></p>
                 <p><strong>Upload Date: </strong> <%=post.date%></p>
                 <p><strong>Content ID: </strong><%=post._id%></p>
-            </div>
+            <form action="/api/posts/<%=post._id%>?_method=DELETE" method="POST">
+                <button class="btn btn-block red">Delete</button>
+            </form>
         </div>
-    <%});%>
+    </div>
+</div>
 </div>
 <%include partials/footer%>
