--- a/views/admin-delete.ejs
+++ b/views/admin-delete.ejs
@@ -10,6 +10,7 @@
             <div class="desc">
                 <p><strong>Title: </strong> <%=post.title%></p>
                 <p><strong>Info: </strong><%=post.info%></p>
+                <p><strong>Upload Date: </strong> <%=post.date%></p>
                 <p><strong>Content ID: </strong><%=post._id%></p>
                 <a href="/gsad/admin/delete/<%=post._id%>" class="btn btn-block red">Delete</a>
             </div>
