add content show routing and fine tune the sorting of content

--- a/views/admin-upload.ejs
+++ b/views/admin-upload.ejs
@@ -24,7 +24,11 @@
             <input type="text" name="uploaded_by"
             placeholder="Uploaded By" required>
         </div>
-        <div class="col-12">
+        <div class="col-4">
+                <label for="ctype">Type</label>
+                <input type="text" name="ctype" placeholder="eg. Assignment,Notes etc." required>
+        </div>
+        <div class="col-8">
             <label for="info">Info</label>
             <input type="text" name="info" placeholder="Additional information about the content" required>
         </div>
