--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,11 @@
 <%include partials/header%>
 <div class="grid container">
-    <h1>index route</h1>
+    <a href="/assignment">
+        assignments
+    </a>
+    <a href="notes">
+        notes
+    </a>
 </div>
 
 <%include partials/footer%>
-    
