--- a/views/admin-upload.ejs
+++ b/views/admin-upload.ejs
@@ -9,7 +9,7 @@
     </p>
     <a href="/gsad/admin" class="btn big green">Go Back</a>
 </div>
-<form action="/api/posts" method="POST">
+<form action="/api/posts" method="POST" style="margin-bottom:50px;">
     <div class="grid container">
         <div class="col-4">
             <label for="title">Title</label>
