--- a/views/admin-register.ejs
+++ b/views/admin-register.ejs
@@ -1,5 +1,8 @@
-<form action="/gsad/admin/register" method="POST">
-    <input type="text" placeholder="username" name="username">
-    <input type="password" placeholder="password" name="password">
-    <button>register</button>
-</form>
+<% include partials/header %>
+    <form action="/gsad/admin/register" method="POST">
+        <input type="text" placeholder="username" name="username">
+        <input type="password" placeholder="password" name="password">
+        <button>register</button>
+    </form>
+
+    <% include partials/footer %>
