--- a/app/views/content.ejs
+++ b/app/views/content.ejs
@@ -73,10 +73,8 @@
 								<p>Info: <%= content.info %></p>
 				                <p>Upload details: TeamGeekseek | <%= content.ctype %> | <%= content.created.toDateString() %></p>
 								<a href="https://drive.google.com/file/d/<%= content.fid %>/view" target="_blank" class="btn btn-block green">Download or View <i class="fas fa-download" aria-hidden="true"></i></a>
-								<form action="/<%= content._id %>/delete?_method=DELETE" method="POST">
-					                <a href="/<%= content._id %>/edit" class="btn btn-block yellow">Edit <i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
-					                <button class="btn btn-block red">Delete <i class="fas fa-trash-alt" aria-hidden="true"></i></button>
-					            </form>
+					            <a href="/<%= content._id %>/edit" class="btn btn-block yellow">Edit <i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
+					            <a href="/<%= content._id %>/delete" class="btn btn-block red">Delete <i class="fas fa-trash-alt" aria-hidden="true"></i></a>
 				            </div>
 				        </div>
 				    <% } %>
@@ -94,10 +92,8 @@
 			                <p>Upload details: TeamGeekseek | <%= content.created.toDateString() %></p>
 							<a href="https://drive.google.com/file/d/<%= content.fid %>/view" target="_blank" class="btn btn-block green">Download or View <i class="fas fa-download" aria-hidden="true"></i></a>
 							<% if((currentUser) && ((currentUser._id.equals(content.owner)) || (currentUser._id.toString()===superAdmin))){ %>
-								<form action="/<%= content._id %>/delete?_method=DELETE" method="POST">
-					                <a href="/<%= content._id %>/edit" class="btn btn-block yellow">Edit <i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
-					                <button class="btn btn-block red">Delete <i class="fas fa-trash-alt" aria-hidden="true"></i></button>
-					            </form>
+								<a href="/<%= content._id %>/edit" class="btn btn-block yellow">Edit <i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
+					            <a href="/<%= content._id %>/delete" class="btn btn-block red">Delete <i class="fas fa-trash-alt" aria-hidden="true"></i></a>
 					        <% } %>
 			            </div>
 			        </div>
