--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -9,7 +9,7 @@
 				<ul class="foot-social">
 					<li><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
 					<li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
-					<li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
+					<li><a href="https://github.com/riuandg5/Geekseek" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
 					<li><a href=""><i class="fab fa-google-plus fa-2x"></i></a></li>
 				</ul>
 			</div>
