--- a/app/views/contentedit.ejs
+++ b/app/views/contentedit.ejs
@@ -6,7 +6,7 @@
 <form action="/<%= content._id %>/update?_method=PUT" method="POST" enctype="multipart/form-data" style="margin-bottom:50px;">
     <div class="grid container">
         <div class="col-6">
-                <input type="file" name="fup" required style="width: 100%; height: 30px;">
+                <input type="file" name="fup" style="width: 100%; height: 30px;">
                 <input type="text" name="content[fid]" value="<%= content.fid %>" style="display: none;">
             </div>
         <div class="col-6">
