--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -18,6 +18,14 @@
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <meta name="theme-color" content="#353443">
     <!-- ------ -->
+    <meta property="og:image" content="/favicons/og-image.jpg">
+    <meta property="og:image:width" content="279">
+    <meta property="og:image:height" content="279">
+    <meta property="og:description" content="&lt;em&gt;All your study needs in one place...&lt;/em&gt;&lt;br&gt;
+    Geekseek is a new platform for fulfilling all your study needs just in a blink. We have a new way for content collection which ensures content quality and accessibility. Make it, use it and share it!">
+    <meta property="og:title" content="Geekseek">
+    <meta property="og:url" content="https://geekseeknsit.herokuapp.com/">
+    <!-- ------ -->
     <title>Geekseek</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
