homepage contentas tiles

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -7,26 +7,106 @@
             <a href="https://api.whatsapp.com/send?text=https%3A%2F%2Fgeekseeknsit.herokuapp.com%2F%0A*Welcome%20to%20Geekseek*%0A_All%20your%20study%20needs%20in%20one%20place_" target="_blank" class="btn green big">Share <i class="fas fa-share-alt" aria-hidden="true"></i></a>
         </div>
         <div class="grid container">
-            <div class="col-6 content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-universal-access fa-8x" aria-hidden="true"></i><br>
+                        <h1>User Friendly</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
             </div>
-            <div class="col-6 content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-mobile-alt fa-8x" aria-hidden="true"></i><br>
+                        <h1>Add to Homescreen</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
             </div>
-            <div class="col-6 content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-people-carry fa-8x" aria-hidden="true"></i><br>
+                        <h1>Help Others!</h1>
+                        <h1>Help Yourself!</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
             </div>
-            <div class="col-6 content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-server fa-8x" aria-hidden="true"></i><br>
+                        <h1>Complete Content Backup</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
             </div>
-            <div class="col-6 content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-sync fa-8x" aria-hidden="true"></i><br>
+                        <h1>Always Uptodate Content</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
             </div>
-            <div class="col-6 content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-users-cog fa-8x" aria-hidden="true"></i><br>
+                        <h1>About Our Team</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
             </div>
-            <div class="col-6 content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-handshake fa-8x" aria-hidden="true"></i><br>
+                        <h1>Join Admin Panel</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-chess-king fa-8x" aria-hidden="true"></i><br>
+                        <h1>Super Admin</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 tile">
+                <div class="tile-content">
+                    <div class="front">
+                        <i class="fas fa-heart fa-8x" aria-hidden="true"></i><br>
+                        <h1>With Love</h1>
+                        <h1>For Love</h1>
+                    </div>
+                    <div class="back">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                    </div>
+                </div>
             </div>
         </div>
     </div>
