footer and home improved

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -14,7 +14,7 @@
                         <h1>User Friendly</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
@@ -22,10 +22,10 @@
                 <div class="tile-content">
                     <div class="front">
                         <i class="fas fa-mobile-alt fa-8x" aria-hidden="true"></i><br>
-                        <h1>Add to Homescreen</h1>
+                        <h1>Access From Homescreen</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                         <h1>Help Yourself!</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                         <h1>Complete Content Backup</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                         <h1>Always Uptodate Content</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                         <h1>About Our Team</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                         <h1>Join Admin Panel</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                         <h1>Super Admin</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                         <h1>For Love</h1>
                     </div>
                     <div class="back">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
                     </div>
                 </div>
             </div>
