--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -7,10 +7,9 @@
 			</div>
 			<div class="foot-l">
 				<ul class="foot-social">
-					<li><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
-					<li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
-					<li><a href="https://github.com/riuandg5/Geekseek" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
-					<li><a href=""><i class="fab fa-google-plus fa-2x"></i></a></li>
+					<li><a href="https://github.com/thetinygoat" title="Sachin Saini" target="_blank"><img src="https://avatars0.githubusercontent.com/u/32238055" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
+					<li><a href="https://github.com/riuandg5/Geekseek" title="Github Project" target="_blank"><i class="fab fa-github fa-3x"></i></a></li>
+					<li><a href="https://github.com/riuandg5" title="Rishu Anand" target="_blank"><img src="https://avatars2.githubusercontent.com/u/34133332" style="background-color: white; width: 3em; height: 3em; border-radius: 50%;"></a></li>
 				</ul>
 			</div>
 		</div>
