--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -16,5 +16,16 @@
 	</div>
 	</div>
 	<script src="/js/script.js"></script>
+	<script>
+		if('serviceWorker' in navigator){
+			console.log("Will the service worker register?");
+			navigator.serviceWorker.register('/js/service-worker.js')
+			.then(function(reg){
+		    	console.log("Yes, it did.");
+		  	}).catch(function(err){
+				console.log("No it didn't. This happened: ", err)
+			});
+		}
+	</script>
 </body>
 </html>
