--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -146,5 +146,16 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
     </div>-->
+    <script>
+        if('serviceWorker' in navigator){
+            console.log("Will the service worker register?");
+            navigator.serviceWorker.register('service-worker.js')
+            .then(function(reg){
+                console.log("Yes, it did.");
+            }).catch(function(err){
+                console.log("No it didn't. This happened: ", err)
+            });
+        }
+    </script>
 
 <% include partials/footer %>
