--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -17,15 +17,7 @@
 	</div>
 	<script src="/js/script.js"></script>
 	<script>
-        if('serviceWorker' in navigator){
-            console.log("Will the service worker register?");
-            navigator.serviceWorker.register('/service-worker.js')
-            .then(function(reg){
-                console.log("Yes, it did.");
-            }).catch(function(err){
-                console.log("No it didn't. This happened: ", err)
-            });
-        }
+        !function(){function e(){"serviceWorker"in navigator&&location.host.indexOf("localhost")===-1&&navigator.serviceWorker.register("/service-worker.js").then(function(e){console.log("ServiceWorker registration successful with scope: ",e.scope)}).catch(function(e){console.error("ServiceWorker registration failed: ",e)})}e()}();
     </script>
 </body>
 </html>
