testing new cache

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -4,7 +4,7 @@
         <div class="hero">
             <h1 class="hero-head">Welcome to Geekseek</h1>
             <h2>All your study needs in one place</h2>
-            <a href="https://api.whatsapp.com/send?text=https%3A%2F%2Fgeekseeknsit.herokuapp.com%2F%0A*Welcome%20to%20Geekseek*%0A_All%20your%20study%20needs%20in%20one%20place_" target="_blank" class="btn green big">Share <i class="fas fa-share-alt" aria-hidden="true"></i></a>
+            <a href="https://api.whatsapp.com/send?text=https%3A%2F%2Fgeekseeknsit.herokuapp.com" target="_blank" class="btn green big">Share <i class="fas fa-share-alt" aria-hidden="true"></i></a>
         </div>
         <div class="grid container">
             <div class="col-6 tile">
