--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -19,7 +19,7 @@
 	<script src="/js/script.js"></script>
 	<script>
 		function addToHomeScreen(){
-			if(("serviceWorker"in navigator) && (location.host.indexOf("localhost")===-1)){
+			if("serviceWorker" in navigator){
 	            navigator.serviceWorker.register('/service-worker.js')
 	            .then(function(reg){
         			console.log("ServiceWorker registration successful with scope: ", reg.scope)
